<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hal</name>
  <version>0.0.1</version>
  <description>he Hardware Abstraction Layer for the VANILLE project.
  Implement vendor specific drivers to read/write to real hardware and
  provide a ros standard interface for control via other nodes.
</description>
  <maintainer email="contact@konexinc.com">SylvainInc</maintainer>
  <license>TODO: License declaration</license>

  <depend>python-tinymovr-pip</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
